--- a/projects/ngx-coding-components/src/lib/var-coding/dialogs/edit-source-parameters-dialog.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/dialogs/edit-source-parameters-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>{{ (newVariableMode ? 'varlist.add' : 'derive-processing.prompt') | translate }}</h1>
+<h1 mat-dialog-title>{{ (newVariableMode ? 'varList.add' : 'derive-processing.prompt') | translate }}</h1>
 
 <mat-dialog-content>
   <div class="fx-column-start-stretch">
