Fix undefined var-info error generate coding

--- a/projects/ngx-coding-components/src/lib/var-coding/dialogs/generate-coding-dialog.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/dialogs/generate-coding-dialog.component.html
@@ -1,4 +1,7 @@
-<h1 mat-dialog-title>{{ 'coding.generate.dialog-title' | translate}} '{{schemerService.getVariableAliasById(varInfo.id)}}'</h1><mat-dialog-content>
+@if (varInfo) {
+  <h1 mat-dialog-title>{{ 'coding.generate.dialog-title' | translate}} '{{schemerService.getVariableAliasById(varInfo.id || '?')}}'</h1>
+}
+<mat-dialog-content>
   @if (varInfo) {
     <div>
       @for (info of ToTextFactory.varInfoAsText(varInfo); track info) {
