Fix edit source derive sources list

--- a/projects/ngx-coding-components/src/lib/var-coding/dialogs/edit-source-parameters-dialog.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/dialogs/edit-source-parameters-dialog.component.html
@@ -3,7 +3,7 @@
 <mat-dialog-content>
   <div class="fx-column-start-stretch">
     <mat-form-field>
-      <mat-label>{{ 'id' | translate }}</mat-label>
+      <mat-label>Name</mat-label>
       <input matInput id="variableId" name="variableId" required
              [pattern]="VARIABLE_NAME_CHECK_PATTERN"
              [(ngModel)]="data.selfAlias">
