--- a/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/single-code.component.html
@@ -120,7 +120,7 @@
                     (codeRulesChanged)="setCodeChanged()"></code-rules>
       } @else if (codeModel === 'MANUAL_ONLY' && code.type !== 'RESIDUAL_AUTO') {
         <code-instruction [code]="code" (codeDataChanged)="setCodeChanged()" [userRole]="schemerService.userRole"
-                          [hasResidualAutoCode]="hasResidualAutoCode" [style.max-height.px]="250"></code-instruction>
+                          [hasResidualAutoCode]="hasResidualAutoCode" ></code-instruction>
       }
     </div>
     @if (codeModel === 'NONE') {
@@ -129,7 +129,7 @@
       }  @else {
         <code-instruction [code]="code" (codeDataChanged)="setCodeChanged()" [userRole]="schemerService.userRole"
                           [hasResidualAutoCode]="hasResidualAutoCode"
-                          class="fx-flex-fill" [style.max-height.px]="300"></code-instruction>
+                          class="fx-flex-fill" ></code-instruction>
       }
     }
     <button mat-icon-button (click)="deleteCode(codeIndex)" [disabled]="schemerService.userRole === 'RO'"
